--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dep/glm"]
 	path = dep/glm
 	url = https://github.com/g-truc/glm
+[submodule "dep/shaderc"]
+	path = dep/shaderc
+	url = https://github.com/google/shaderc.git
