--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "dep/glm"]
 	path = dep/glm
 	url = https://github.com/g-truc/glm
-[submodule "dep/shaderc"]
+[submodule "dep/glslang"]
 	path = dep/shaderc
-	url = https://github.com/google/shaderc.git
+	url = https://github.com/KhronosGroup/glslang.git
