Added services, shader service(via shaderc)

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "dep/glslang"]
 	path = dep/glslang
 	url = https://github.com/KhronosGroup/glslang.git
+[submodule "dep/shaderc"]
+	path = dep/shaderc
+	url = https://github.com/google/shaderc
