feat: setup bawsic engien frame renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ add_executable(tlc
 # game
     ./tlc/game/Game.cpp
     ./tlc/game/RegisterAssets.cpp
+    ./tlc/game/RegisterServices.cpp
     # ./tlc/game/scenes/MainScene.cpp
     # ./tlc/game/scenes/TestScene.cpp
     # ./tlc/game/components/TriangleUpDown.cpp
