feat: implement PresentationRenderer service and refactor VulkanManager shutdown logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ add_executable(tlc
     ./tlc/services/assetmanager/AssetManagerService.cpp
     ./tlc/services/assetmanager/AssetBundlerService.cpp
     ./tlc/services/renderer/VulkanManagerService.cpp
+    ./tlc/services/renderer/PresentationRendererService.cpp
     # ./tlc/services/DebugUIService.cpp
 # engine
     ./tlc/engine/Scene.cpp
